Fix active stream actions dropdowns. Sort out their spacing.

--- a/src/sentry/static/sentry/less/sentry.less
+++ b/src/sentry/static/sentry/less/sentry.less
@@ -453,7 +453,8 @@ footer {
 }
 
 .btn-group.open .dropdown-toggle {
-  background-color: #e3e3e3 !important;
+  background-color: transparent !important;
+  color: #141516 !important;
   .box-shadow(none);
 }
 
@@ -889,6 +890,14 @@ a.icon-share {
     position: absolute;
     left: 16px;
     top: 3px;
+  }
+
+  .dropdown-toggle {
+    padding-right: 0;
+  }
+
+  .dropdown-menu {
+    left: 11px;
   }
 
   .stream-actions-cell {
